--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">food-recipe-app</string>
+    <string name="text_title_recipe"><font color="#3D3D3D">Simple way to find \n</font><font color="#FF6838">tasty recipes</font></string>
+    <string name="text_popular_meal">Popular Meal</string>
+    <string name="text_title_category">Category</string>
+    <string name="text_title_food">Teriyaki Chicken</string>
+    <string name="text_title_area">Country</string>
+    <string name="text_title_instruction">INSTRUCTIONS</string>
+    <string name="text_title_ingredients">INGREDIENTS</string>
+    <string name="text_title_tags">Desert, Summer, Fruity, Dairy</string>
+    <string name="text_btn_detile">Detail</string>
+    <string name="text_dsc_category">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistori</string>
 </resources>
