Create layout for edit delete page, add some style and string with primary color. Use library for image carousel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">food-recipe-app</string>
+    <string name="text_hint_recipe_name">Recipe Name</string>
+    <string name="text_hint_recipe_body">Recipe</string>
+    <string name="btn_update_recipe">Update Recipe</string>
+    <string name="btn_delete_recipe">Delete Recipe</string>
+
+    <string-array name="categories">
+        <item>Western</item>
+        <item>Indonesian</item>
+        <item>Chinese</item>
+    </string-array>
 </resources>
