[sekar] - update theme, image launcher, image splash screen, HomeActivity - add class HomeAdapter, Recipe, RecipeDataSource - add library dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,19 @@
 <resources>
-    <string name="app_name">food-recipe-app</string>
+    <string name="app_name">Food Recipe</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="text_title_intro_one">Explore<font color="#FF672C">Thousands</font> of Recipes</string>
+    <string name="text_title_intro_one">Explore <font color="#FF672C">Thousands \n</font>of Recipes</string>
     <string name="text_desc_intro_one">You can create your own recipe here</string>
     <string name="text_title_intro_two">Feel <font color="#FF672C">Free</font> to Update</string>
-    <string name="text_desc_intro_two">If recipe is not relevant anymore, feel free to Update</string>
+    <string name="text_desc_intro_two">If recipe is not relevant anymore, \nfeel free to Update</string>
     <string name="text_title_intro_three">Feel <font color="#FF672C">Free</font> to Remove</string>
-    <string name="text_desc_intro_three">If recipe is not relevant anymore, you can remove easily</string>
+    <string name="text_desc_intro_three">If recipe is not relevant anymore, \nyou can remove easily</string>
     <string name="text_title_recipe"><font color="#3D3D3D">Simple way to find \n</font><font color="#FF6838">tasty recipes</font></string>
     <string name="text_popular_meal">Popular Meal</string>
     <string name="text_title_category">Category</string>
     <string name="text_title_food">Teriyaki Chicken</string>
     <string name="text_title_area">Country</string>
+    <string name="text_category">Dessert</string>
     <string name="text_title_instruction">INSTRUCTIONS</string>
     <string name="text_title_ingredients">INGREDIENTS</string>
     <string name="text_title_tags">Desert, Summer, Fruity, Dairy</string>
