--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,13 +19,33 @@
     <string name="text_btn_detile">Detail</string>
     <string name="text_dsc_category">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistori</string>
     <string name="text_hint_recipe_name">Recipe Name</string>
-    <string name="text_hint_recipe_body">Recipe</string>
+    <string name="text_hint_recipe">Recipe</string>
     <string name="btn_update_recipe">Update Recipe</string>
     <string name="btn_delete_recipe">Delete Recipe</string>
+    <string name="text_copy_link_image">Copy Link Image</string>
+    <string name="text_hint_link_image">Link Image</string>
+    <string name="text_hint_recipe_ingredients">Ingredients</string>
+    <string name="text_recipe_categories">Categories</string>
+    <string name="text_recipe_instructions">Instructions</string>
+    <string name="text_ingredients">Ingredients</string>
+    <string name="text_instructions">Instructions</string>
+    <string name="text_save">Save</string>
+    <string name="text_delete">Delete</string>
 
     <string-array name="categories">
-        <item>Western</item>
-        <item>Indonesian</item>
-        <item>Chinese</item>
+        <item>Beef</item>
+        <item>Breakfast</item>
+        <item>Chicken</item>
+        <item>Desert</item>
+        <item>Goat</item>
+        <item>Lamb</item>
+        <item>Miscellaneous</item>
+        <item>Pasta</item>
+        <item>Pork</item>
+        <item>Seafood</item>
+        <item>Side</item>
+        <item>Starter</item>
+        <item>Vegan</item>
+        <item>Vegetarian</item>
     </string-array>
 </resources>
