--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,9 @@
     <string name="text_dsc_category">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistori</string>
     <string name="text_hint_recipe_name">Recipe Name</string>
     <string name="text_hint_recipe_body">Recipe</string>
-    <string name="btn_update_recipe">Update Recipe</string>
-    <string name="btn_delete_recipe">Delete Recipe</string>
+    <string name="btn_update_recipe">Update</string>
+    <string name="btn_delete_recipe">delete</string>
+    <string name="btn_save_recipe">save</string>
 
     <string-array name="categories">
         <item>Western</item>
