--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="text_instructions">Instructions</string>
     <string name="text_save">Save</string>
     <string name="text_delete">Delete</string>
+    <string name="text_action_bar_edit_delete_activity">Edit Delete Recipe</string>
 
     <string-array name="categories">
         <item>Beef</item>
