Update xml add page with new design, and add title action bar in AddActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="text_save">Save</string>
     <string name="text_delete">Delete</string>
     <string name="text_action_bar_edit_delete_activity">Edit Delete Recipe</string>
+    <string name="text_action_bar_add_activity">Add Recipe</string>
 
     <string-array name="categories">
         <item>Beef</item>
