--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="text_instructions">Instructions</string>
     <string name="text_save">Save</string>
     <string name="text_delete">Delete</string>
+    <string name="text_title_ingredients_detail">Ingredients</string>
+    <string name="text_title_instructions_title">Instructions</string>
+    <string name="btn_update_detail">Update Recipe</string>
 
     <string-array name="categories">
         <item>Beef</item>
