--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="text_action_bar_edit_delete_activity">Update Recipe</string>
     <string name="text_action_bar_add_activity">Add Recipe</string>
     <string name="text_detail_recipe">Detail Recipe</string>
+    <string name="text_success_add_recipe">Success add recipe!</string>
+    <string name="text_failed_add_recipe">Failed add recipe!</string>
 
     <string-array name="categories">
         <item>Beef</item>
