--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Food Recipe</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_title_intro_one">Explore <font color="#FF672C">Thousands \n</font>of Recipes</string>
     <string name="text_desc_intro_one">You can create your own recipe here</string>
     <string name="text_title_intro_two">Feel <font color="#FF672C">Free</font> to Update</string>
@@ -9,7 +7,7 @@
     <string name="text_title_intro_three">Feel <font color="#FF672C">Free</font> to Remove</string>
     <string name="text_desc_intro_three">If recipe is not relevant anymore, \nyou can remove easily</string>
     <string name="text_title_recipe"><font color="#3D3D3D">Simple way to find \n</font><font color="#FF6838">tasty recipes</font></string>
-    <string name="text_welcome"><font color="3D3D3D">Add your </font><font color="FC9D27">Popular Meal </font><font color="3D3D3D">and \n</font><font color="3D3D3D">lets get </font><font color="FC9D27">started</font></string>
+    <string name="text_welcome"><font color="#3D3D3D">Add your </font><font color="#FF6838">Popular Meal \n</font><font color="#3D3D3D">and lets get </font><font color="#FF6838">started!</font></string>
     <string name="text_popular_meal">Popular Meal</string>
     <string name="text_title_category">Category</string>
     <string name="text_title_food">Teriyaki Chicken</string>
